--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -6,6 +6,37 @@
   "Barcode": "Штрихкод",
   "Producer": "Производитель",
   "Brand": "Бренд",
-  "AddToCart": "В корзину"
+  "AddToCart": "В корзину",
+
+
+  "SupplierSultan": "Оптовый поставщик «Султан»",
+  "Address": "Адрес",
+  "KokshetauTashenova": "г. Кокшетау, ул. Ж. Ташенова 129Б",
+  "EasternMarket": "Рынок Восточный",
+  "SalesDepartment": "Отдел продаж",
+  "TaxpayerData": "Данные налогоплательщика",
+  "Katran": "ИП Катран Д.С.",
+  "TaxpayerNumber": "ИНН",
+
+
+  "DescriptionOfTheCompany": "Компания «Султан» — снабжаем розничные магазины товарами \"под ключ\" в Кокчетаве и Акмолинской области",
+  "SubscribeToDiscount": "Подпишись на скидки и акции",
+  "SiteMenu": "Меню сайта",
+  "Сompany": "О компании",
+  "Delivery": "Доставка",
+  "Return": "Возврат",
+  "Contacts": "Контакты",
+  "Categories": "Категории",
+  "Chemistry": "Бытовая химия",
+  "Cosmetics": "Косметика и гигиена",
+  "Home": "Товары для дома",
+  "Children": "Товары для детей и мам",
+  "Dishes": "Посудa",
+  "DowloadPrice": "Скачать прайс-лист",
+  "PriceList": "Прайс-лист",
+  "Communication": "Связь в мессенджерах",
+  "WorkingHours": "Время работы",
+  "OrderCall": "Заказать звонок",
+  "TouchAnyTime":"На связи в любое время"
 
 }
