--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,17 +1,72 @@
 {
   "WebWeavers": "WebWeavers",
 
+
+  "Main": "Home",
+  "Back": "Back",
+
+
+  "MainTitle": "Household chemicals, cosmetics and household goods",
+  "Wholesale": "WHOLESALE",
+  "Kokchetav": "ACROSS KOKCHETAV AND THE REGION",
+  "ToKatalog": "TO THE CATALOG",
+  "BestDeals": "Only the best deals",
+  "Shipping": "Free shipping in Kokchetav from 10 thousand ₸",
+
+
+  "AboutCompany": "About Company",
+  "DeliveryAndPayment": "Delivery and Payment",
+  "MapIconAlt": "Map Icon",
+  "MainAddress": "Kokshetau, Zhanibek Tashenov St. 129B",
+  "SubAddress": "(Eastern Market)",
+  "PostIconAlt": "Mail Icon",
+  "Email": "opt.sultan@mail.ru",
+  "AlwaysAvailable": "Available anytime",
+  "LogoAlt": "Sultan",
+  "Catalog": "Catalog",
+  "CatalogIconAlt": "Catalog Icon",
+  "SearchPlaceholder": "Search…",
+  "SearchIconAlt": "Search",
+  "PhoneNumber": "+7 (777) 490-00-91",
+  "PersonIconAlt": "Employee",
+  "PriceListIconAlt": "Price List Icon",
+  "BasketIconAlt": "Basket",
+  "Cart": "Cart",
+
+
+  "saleHighlight": "SALE",
+  "Similar":"SIMILAR",
+  "saleProducts": "PRODUCTS",
+
+
   "Popular": "Popular",
   "Type": "Type",
   "Barcode": "Barcode",
   "Producer": "Producer",
   "Brand": "Brand",
   "AddToCart": "Add to cart",
+  "InStock":"In stock",
+  "FreeShipping":"When buying from",
+  "FreeShippingLocation":"free shipping in Kokchetav and the region",
+  "Category": "Category",
+  "Description":"Description",
+  "ClickMe":"Click Me!",
+
+
+  "CATEGORIES": "CATEGORIES",
+  "PRODUCTS": "OF PRODUCTS",
+  "SpecialPrices": "10,000+ popular items at special prices",
+
+  
+  "highlight": "BEST",
+  "subtitle": "From leading global brands",
+  "products": "PRODUCTS",
+
 
   "SupplierSultan": "Wholesale supplier \"Sultan\"",
   "Address": "Address",
   "KokshetauTashenova": "Kokshetau, 129B Zh. Tashenov street",
-  "EasternMarket": "The Eastern market",
+  "EasternMarket": "(The Eastern market)",
   "SalesDepartment": "Sales Department",
   "TaxpayerData": "Taxpayer's data",
   "Katran": "IE Katran D.S.",
@@ -35,5 +90,6 @@
   "Communication": "Communication in messengers",
   "WorkingHours": "Working hours",
   "OrderCall": "Order a call",
-  "TouchAnyTime": "Be in touch at any time"
+  "TouchAnyTime": "Be in touch at any time",
+  "EnterYourEmail": "Enter your E-mail"
 }
