--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -56,6 +56,21 @@
   "SpecialPrices": "10 000+ ходовых позиций по специальным ценам",
 
 
+  "PromotionSwiper": {
+    "PromotionSlide": {
+      "Duration": "*АКЦИЯ ДЕЙСТВУЕТ ДО 04/09/22",
+      "Title": "Название Акции",
+      "Description": "Условия: поставить лайк , подписаться на канал , репост на стену ВК",
+      "ButtonText": "ПРИНЯТЬ УЧАСТИЕ"
+    },
+    "PartnerSlide": {
+      "Duration": "*АКЦИЯ ДЕЙСТВУЕТ ДО 02/03/24",
+      "Title": "Наш партнер",
+      "Description": "Леруа мерлен Леруа мерлен Леруа Леруа Леруа мерлен Леруа Леруа Леруа",
+      "ButtonText": "ПЕРЕЙТИ К БРЕНДУ"
+    }
+  },
+
   "highlight": "ЛУЧШИЕ",
   "subtitle": "От ведущих мировых брендов",
   "products": "ТОВАРЫ",
